apollo-federation/src/connectors/expand/tests/snapshots/api@buggy_graphs_empty.graphql.snap
---
source: apollo-federation/src/connectors/expand/tests/mod.rs
expression: api_schema
input_file: apollo-federation/src/connectors/expand/tests/schemas/expand/buggy_graphs_empty.graphql
---
directive @defer(label: String, if: Boolean! = true) on FRAGMENT_SPREAD | INLINE_FRAGMENT

type Query {
  user: User
}

type User {
  id: ID!
  name: String
}
