apollo-federation/src/connectors/expand/tests/snapshots/api@chained_filter_v0_4.graphql.snap
---
source: apollo-federation/src/connectors/expand/tests/mod.rs
expression: api_schema
input_file: apollo-federation/src/connectors/expand/tests/schemas/expand/chained_filter_v0_4.graphql
---
directive @defer(label: String, if: Boolean! = true) on FRAGMENT_SPREAD | INLINE_FRAGMENT

type Query {
  things: ThingConnection
  activeThings: ThingConnection
}

type ThingConnection {
  things: [Thing]
}

type Thing {
  id: ID!
  name: String
}
