apollo-federation/src/connectors/expand/tests/snapshots/api@circular_reference.graphql.snap
---
source: apollo-federation/src/connectors/expand/tests/mod.rs
expression: api_schema
input_file: apollo-federation/src/connectors/expand/tests/schemas/expand/circular_reference.graphql
---
directive @defer(label: String, if: Boolean! = true) on FRAGMENT_SPREAD | INLINE_FRAGMENT

type Query {
  user(id: ID!): User
}

type User {
  id: ID!
  name: String
  friends: [User]
}
