apollo-federation/src/connectors/expand/tests/snapshots/api@entity_query_field_entity_true_v04.graphql.snap
---
source: apollo-federation/src/connectors/expand/tests/mod.rs
expression: api_schema
input_file: apollo-federation/src/connectors/expand/tests/schemas/expand/entity_query_field_entity_true_v04.graphql
---
directive @defer(label: String, if: Boolean! = true) on FRAGMENT_SPREAD | INLINE_FRAGMENT

type Query {
  """
  The intended way to make a `Query` field a reference resolver: `entity: true`.
  This yields an `Explicit` entity resolver whose key is derived from `$args`, so
  a resolvable `@key` on `Tractor` is correct here — the connector genuinely can
  resolve the entity by its key.

  This is the documented workaround, so it differs from `entity_query_field_v04`
  in *both* of the ways that workaround requires: `entity: true` here, and no
  type-level `@connect` reference resolver on `Tractor`. Either change alone is
  not the workaround — leaving the type-level resolver in place would just give
  `Tractor` two resolvable entity paths.
  """
  tractor(id: ID!): Tractor
}

type Tractor {
  id: ID!
  name: String
}
