apollo-federation/src/connectors/expand/tests/snapshots/api@namespace.graphql.snap
---
source: apollo-federation/src/connectors/expand/tests/mod.rs
expression: api_schema
input_file: apollo-federation/src/connectors/expand/tests/schemas/expand/namespace.graphql
---
directive @defer(label: String, if: Boolean! = true) on FRAGMENT_SPREAD | INLINE_FRAGMENT

type Query {
  me: User
}

type User {
  id: ID!
  name: String
}

type Mutation {
  user: UserMutations
}

type UserMutations {
  update(id: ID!): String
}
